2015-07-30 (0.1.4) Michael Callahan
        * Added preseed class. Reworked apt module to work at a lower level.

2015-07-28 (0.1.3) Michael Callahan
        * Fixed many errors. Updated README.

2015-07-27 (0.1.2) Michael Callahan
        * Implemented OS based package handling

2015-07-23 (0.1.1) Michael Callahan
        * Fixed wget path

2015-07-23 (0.1.0) Michael Callahan
        * Moved profiled to its own class. Restructured proxy variables. Setup for public release.

2015-07-08 (0.0.2)  Michael Callahan
        * Wrote bulk of module.

2015-07-08 (0.0.1)  Michael Callahan
        * Initial Commit of default files etc.