@@ -10,10 +10,13 @@ AllCops:
     - '**/*.gemspec'
     - '**/*.rake'
     - '**/Gemfile'
+    - '**/Puppetfile'
     - '**/Rakefile'
     - '**/Guardfile'
   Exclude:
+    - 'modules/**/*'
     - 'pkg/**/*'
+    - 'spec/fixtures/**/*'
   RunRailsCops: false
   DisplayCopNames: true
 
@@ -26,3 +29,8 @@ Metrics/LineLength:
 # Support ruby 1.8.7
 Style/HashSyntax:
   EnforcedStyle: hash_rockets
+
+# The shebang stuff at the top triggers this
+Style/LeadingCommentSpace:
+  Exclude:
+    - Puppetfile
